--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,9 @@
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.525.0",
-    "next": "15.4.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^15.4.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.3.1",
@@ -30,7 +30,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20",
+    "@types/node": "^20.19.8",
     "@types/react": "^19",
     "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
