--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.525.0",
     "next": "^15.4.1",
     "react": "^19.1.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
@@ -32,6 +33,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.19.8",
     "@types/react": "^19",
+    "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
