--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,31 @@
- 
-# Dependencies
+# Node modules
 node_modules/
-.pnp
-.pnp.js
+*/node_modules/
 
-# Environment variables
+# Environment files
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.production
+*/.env
+*/.env.local
 
-# Production
-/build
-/dist
+# Build directories
+dist/
+build/
+.next/
+*/dist/
+*/build/
+*/.next/
 
 # Logs
-logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pm2/
+logs/
 
-# OS
+# OS files
 .DS_Store
 Thumbs.db
 
@@ -32,61 +35,15 @@ Thumbs.db
 *.swp
 *.swo
 
+# Uploads
+uploads/
+*/uploads/
+
+# Database
+*.sql
+*.sqlite
+
 # Temporary files
 *.tmp
 *.temp
-# Frontend temp files
-frontend/Accept:
-frontend/GET
-frontend/Host:
-frontend/User-Agent:
-
-# Backend compiled files
-backend/dist/
-
-# Logs
-*.log
-logs/
-pm2/
-
-# Environment files
-.env
-.env.local
-.env.production
-
-# OS files
-.DS_Store
-Thumbs.db
-backend/dist/
-backend/uploads/**
-
-# Backup files
-*.backup
-*.backup2
-*.old
-
-# Environment files  
-.env
-.env.local
-
-# Build folders
-dist/
-.next/
-
-# Logs
-*.log
-npm-debug.log*
-
-# Dependencies
-node_modules/
-
-# PM2
-.pm2/
-
-# IDE
-.vscode/
-.idea/
-
-# OS
-.DS_Store
-Thumbs.db
+.cache/
