--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,64 @@
-# Node modules
+# Dependencies
 node_modules/
-*/node_modules/
+.pnp
+.pnp.js
+
+# Production
+build/
+dist/
+.next/
+out/
 
 # Environment files
 .env
 .env.local
-.env.production
-*/.env
-*/.env.local
-
-# Build directories
-dist/
-build/
-.next/
-*/dist/
-*/build/
-*/.next/
+.env.development.local
+.env.test.local
+.env.production.local
+*.env
 
 # Logs
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pm2/
-logs/
+.pnpm-debug.log*
 
-# OS files
+# OS
 .DS_Store
-Thumbs.db
-
-# IDE
-.vscode/
-.idea/
 *.swp
 *.swo
+*~
 
-# Uploads
-uploads/
-*/uploads/
+# IDEs
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Testing
+coverage/
+.nyc_output
+
+# Misc
+*.pem
+.cache
+.parcel-cache
+.turbo
 
 # Database
-*.sql
 *.sqlite
+*.sqlite3
+*.db
 
-# Temporary files
-*.tmp
-*.temp
-.cache/
+# Backups
+*.bak
+*.backup
+
+# PM2
+.pm2/
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
