--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,51 @@ coverage/
 # TypeScript
 *.tsbuildinfo
 next-env.d.ts
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Production
+.next/
+out/
+build/
+dist/
+
+# Misc
+.DS_Store
+*.pem
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
+.vscode/
+.idea/
+
+# PM2
+.pm2/
+
+# Logs
+logs/
+*.log
+
+# Uploads
+uploads/
+public/uploads/
+
+# Cache
+.cache/
+*.cache
+
+# Backup files
+*.bak
+*.old
+*.backup
