--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
@@ -22,7 +23,9 @@
     "next": "^15.4.1",
     "react": "^19.1.0",
     "react-calendar": "^6.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.3.1",
@@ -35,6 +38,7 @@
     "@types/react": "^19",
     "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "^19.1.6",
+    "@types/react-dropzone": "^4.2.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
