feat: Add real-time notifications system and reminders
- Implemented Socket.io for real-time notifications
- Added notification system with sound alerts
- Created reminder service (24h, 1h, follow-up emails)
- Added export functionality (CSV/Excel)
- Fixed notification duplicates issue
- Added notification sound (bell)
- Integrated Socket.io with NotificationSystem component

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "ts-node src/server.ts",
     "dev": "nodemon --exec ts-node src/server.ts",
-    "build": "tsc",
+    "build": "tsc && ./copy-templates.sh",
     "build:watch": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,22 +14,31 @@
   "license": "ISC",
   "description": "Interview Booking App Backend",
   "dependencies": {
+    "@types/handlebars": "^4.0.40",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "express-rate-limit": "^8.0.1",
     "express-validator": "^7.2.1",
+    "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
+    "resend": "^4.7.0",
     "sharp": "^0.34.3",
-    "uuid": "^11.1.0"
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "uuid": "^11.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -41,9 +50,12 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.1.0",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.15.4",
+    "@types/socket.io": "^3.0.1",
     "@types/uuid": "^10.0.0",
+    "@types/xlsx": "^0.0.35",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
